[package]
name = "segment_store"
version = "0.1.0"
authors = ["Edd Robinson <me@edd.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arrow_deps = { path = "../arrow_deps" }
packers = { path = "../packers" }
croaring = "0.4.5"
rand = "0.7.3"
rand_distr = "0.3.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"


[[bench]]
name = "fixed"
harness = false

[[bench]]
name = "dictionary"
harness = false
