[package]
name = "wal"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"

[dependencies]
crc32fast = "1.2.0"
snafu = "0.6.6"
snap = "1.0.0"
regex = "1.3"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
crossbeam-epoch = "0.9"
tokio = { version = "0.2", features = ["full"] }
arrayref = "0.3"
nix = "0.19"
memchr = "2"
parking_lot = "0.11"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7"
